minor CSS updates (fixed scrollbar and word break)

--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -66,7 +66,7 @@ li{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    height: 100%;
+    height: 60em;
     overflow: scroll;
 
 }
@@ -82,6 +82,7 @@ li{
     width: 200px;
     height: 200px;
     background-color: #b79747;
+    overflow-wrap: break-word;
 }
 
 a{
